# Dispy

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt  setup.py  testing.py
assets/olds/: __init__.old.py
dispy/: __init__.py  error_codes.json  module.py
dispy/data/: __init__.py  errors.json  errors.py  intents.json  intents.py
dispy/dispy/: events.py  intents.py  requests.py  rest_api.py  utilites.py
dispy/modules/: __init__.py  dictwrapper.py  error.py  eventargs.py  heartbeats.py  intents.json  intents.py  rest_api.py  result.py
dispy/modules/appdirs/: __init__.py  readme.md
dispy/types/: __init__.py  application.py  attachment.py  channel.py  command.py  commands.py  component.py  embed.py  emoji.py  entitlement.py  guild.py  interaction.py  message.py  permissions.py  poll.py  reaction.py  role.py  stickers.py  team.py  thread.py  user.py  variable.py
dispy/types/t/: __init__.py  application.py  attachment.py  channel.py  command.py  component.py  embed.py  emoji.py  entitlement.py  guild.py  interaction.py  message.py  permissions.py  poll.py  reaction.py  role.py  stickers.py  team.py  thread.py  user.py  variable.py
docs/: README (1).md  README.md  SUMMARY.md
docs/documentation/: examples.md  support.md
docs/documentation/events/: README.md
docs/documentation/functions/: README.md  message.md  undefined.md
docs/documentation/getting-started/: introduction.md  (+1 more)
docs/getting-started/: introduction.md  setup-your-bot-on-discord.md
docs/informations/: roadmap.md  support.md
documentation/events/: supported-events.md
documentation/functions/: README.md
informations/: roadmap.md
informations/changelogs/: README.md
informations/contribute/: adding-an-api-function.md
(+17 files in other folders)
